# whisper-ai

./: CAPABILITIES.md  Cargo.toml  README.md  compose.yml
docs/: whisper-ai.md
src/: abi_export.rs  lib.rs  main.rs
